--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@ body {
 .header {
     width: 100%;
     height: 60px;
-    background-color: #6200ea;
+    /* background-color: #6200ea; */
+    background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -125,9 +126,9 @@ main {
     height: 60px;
     background-color: #3c3c3c;
     color: #ffffff;
-    font-size: 24px;
+    font-size: 1.8rem;
     text-align: right;
-    padding: 10px;
+    padding: 0.6rem;
     border: none;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -143,8 +144,8 @@ main {
 button {
     background-color: #4c4c4c;
     color: #ffffff;
-    font-size: 18px;
-    padding: 15px;
+    font-size: 1.1rem;
+    padding: 0.9rem;
     border: none;
     border-radius: 10px;
     cursor: pointer;
@@ -169,7 +170,7 @@ button:active {
 }
 
 .calculator-bmi {
-    width: 500px;
+    width: 40%;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
@@ -249,7 +250,8 @@ button:active {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #6200ea;
+    /* background-color: #6200ea; */
+    background-color: black;
     color: white;
 }
 
@@ -310,7 +312,7 @@ button:active {
 .calculator-list li a, .calculator-list2 li a {
     font-size: 1.1rem;
     line-height: 0.24in;
-    color: gray;
+    color: blue;
     text-decoration: none;
 }
 
@@ -324,9 +326,10 @@ button:active {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #6200ea;
+    /* background-color: #6200ea; */
+    background-color: black;
     width: 100%;
-    height: 200px;
+    height: 150px;
     color: white;
 }
 
@@ -366,7 +369,7 @@ button:active {
         overflow-x: hidden;
     }
     .logo {
-        width: 210px;
+        width: 260px;
     }
     #logo {
         height: 40px;
@@ -398,7 +401,7 @@ button:active {
         align-items: end;
     }
     .logo {
-        width: 210px;
+        width: 230px;
     }
     #logo {
         height: 40px;
@@ -438,7 +441,7 @@ button:active {
     
     .calculator-list {
         height: auto;
-        width: 350px;
+        width: 320px;
         box-shadow: none;
         border-radius: 0px;
         margin-right: 0px;
@@ -448,7 +451,7 @@ button:active {
     
     .calculator-list2 {
         height: auto;
-        width: 350px;
+        width: 320px;
         box-shadow: none;
         border-radius: 0px;
         margin-right: 0px;
@@ -461,7 +464,8 @@ button:active {
     }
     
     .calculator-list h3, .calculator-list2 h3 {
-        background-color: #6200ea;
+        /* background-color: #6200ea; */
+        background-color: black;
         color: white;
         height: 40px;
         display: flex;
@@ -469,4 +473,51 @@ button:active {
         margin-bottom: 10px;
         padding-left: 5px;
     }
+}
+
+
+/* Financial Calculators */
+.financial-container {
+    width: 70%;
+    min-width: 768px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    border: 1px solid black;
+}
+
+.left-container, .right-container {
+    height: 1000px;
+}
+
+.left-container {
+    display: flex;
+    flex-direction: column;
+    width: 65%;
+}
+.right-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35%;
+}
+
+.right-box {
+    height: 500px;
+    width: 100%;
+    border: 1px solid black;
+}
+
+.up-container {
+    width: 100%;
+    height: 70px;
+
+}
+
+.down-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 930px;
 }
