--- a/styles.css
+++ b/styles.css
@@ -105,6 +105,54 @@ body {
 #line4 {
     width: 25px;
 }
+.hamburger-navbar {
+    display: none;
+}
+
+.hamburger-search-container {
+    width: 220px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    margin-top: 10px;
+    padding-bottom: 5px;
+}
+#hamburger-search {
+    width: 100%;
+    padding: 10px 10px; 
+    border: 1px solid black;
+    border-radius: 5px; 
+    font-size: 1rem;
+}
+
+.search-button {
+    background-color: black;
+    cursor: pointer;
+    font-size: 25px;
+    padding: 5px;
+    width: 95%;
+    box-shadow: 0px 0px 5px 2px white;
+}
+.hamburger-socialIcons {
+    width: 220px;
+    display: flex;
+    margin-top: 30px;
+    justify-content: space-between;
+}
+.hamburger-social {
+    font-size: 35px;
+    color: white;
+    opacity: 1;
+}
+
+.hamburger-navbar p {
+    color: white;
+}
+
+.hamburger-social:hover {
+   opacity: 0.8;
+}
 
 main {
     width: 70%;
@@ -387,6 +435,11 @@ button:active {
     * {
         overflow-x: hidden;
     }
+    .header {
+        position: fixed;
+        top: 0;
+        padding: 10px;
+    }
     .navbar {
         display: none;
     }
@@ -400,6 +453,41 @@ button:active {
         height: 40px;
         align-items: end;
     }
+    .hamburger-navbar {
+        position: fixed;
+        top: 60px;
+        right: -250px;
+        width: 250px;
+        height: 100vh;
+        background-color: #6200ea;
+        transition: right 0.3s ease;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 50px;
+    }
+    .hamburger-navbar a {
+        color: white;
+        text-decoration: none;
+        padding: 10px;
+        display: block;
+    }
+    .hamburger-navbar a:hover {
+        background-color: #555;
+    }
+    .hamburger-navbar.active {
+        right: 0;
+    }
+    .close-btn {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: none;
+        border: none;
+        color: white;
+        font-size: 20px;
+        cursor: pointer;
+    }
     .logo {
         width: 230px;
     }
@@ -410,22 +498,23 @@ button:active {
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 60px;
     }
     .calculator {
-        width: 350px;
+        width: 340px;
     }
     .buttons {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
-        gap: 10px;
+        gap: 8px;
     }
     button {
-        font-size: 16px;
+        font-size: 14px;
         padding: 10px;
     }
     
     .calculator-bmi {
-        width: 350px;
+        width: 340px;
     }
     
     .category-logo {
