--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
     align-items: center;
 }
 
+/* Top Header / Navbar */
 .header {
     width: 100%;
     height: 60px;
@@ -111,12 +112,9 @@ body {
 
 .hamburger-search-container {
     width: 220px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 15px;
     margin-top: 10px;
-    padding-bottom: 5px;
+    border: 1px solid black;
+    border-radius: 6px; 
 }
 #hamburger-search {
     width: 100%;
@@ -131,7 +129,8 @@ body {
     cursor: pointer;
     font-size: 25px;
     padding: 5px;
-    width: 95%;
+    width: 220px;
+    margin-top: 15px;
     box-shadow: 0px 0px 5px 2px white;
 }
 .hamburger-socialIcons {
@@ -144,16 +143,25 @@ body {
     font-size: 35px;
     color: white;
     opacity: 1;
+    border: none !important;
 }
 
 .hamburger-navbar p {
     color: white;
 }
 
+.hamburger-navbar a {
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid rgb(196, 192, 192);
+}
+
 .hamburger-social:hover {
    opacity: 0.8;
 }
 
+
+/* Main Section including scientific calculator and BMI Calculator */
 main {
     width: 70%;
     min-width: 768px;
@@ -162,8 +170,11 @@ main {
     justify-content: space-between;
     gap: 20px;
 }
+
+/* Scientific Calculator */
 .calculator {
-    background-color: #2c2c2c;
+    /* background-color: #2c2c2c; */
+    background-color: black;
     padding: 20px;
     border-radius: 15px;
     width: 425px;
@@ -217,6 +228,7 @@ button:active {
     transform: scale(0.95);
 }
 
+/* BMI Calculator */
 .calculator-bmi {
     width: 40%;
     background-color: white;
@@ -282,6 +294,7 @@ button:active {
 }
 
 
+/* Free Online Calculators */
 .calculator-category {
     height: auto;
     width: 70%;
@@ -369,6 +382,8 @@ button:active {
     color: rgb(136, 8, 8);
 }
 
+
+/* Footer */
 .footer {
     display: flex;
     flex-direction: column;
@@ -412,6 +427,8 @@ button:active {
     opacity: 0.8;
 }
 
+
+/* Media Query to make responsive */
 @media screen and (max-width: 990px) {
     * {
         overflow-x: hidden;
@@ -464,7 +481,7 @@ button:active {
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding-top: 50px;
+        /* padding-top: 50px; */
     }
     .hamburger-navbar a {
         color: white;
